<resources>
    <string name="app_name">LocAdoc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password is 8-12 charecters. Contains A-Z, a-z, 0-9</string>
    <string name="error_invalid_contact">Invalid contact number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_RePassword_noMatch">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_emailID">Email ID</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_pwd">Password</string>
    <string name="prompt_rpwd">Re-Enter Password</string>
    <string name="prompt_cnum">Contact number</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="SignUp_success_title">"Sign up Successful"</string>
    <string name="SignUp_success_body">"You have successfully registered your LocAdoc account"</string>
    <string name="logo_label">Save Document in Safe Location</string>
    <string name="prompt_userId">User ID</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_confirm_sign_up">Confirm Email</string>
    <string name="newpass_title">Your account is created by the admin. Please set up a new password</string>
    <string name="username_detail_label">Your user name</string>
    <string name="newpass_label">Enter new password</string>
    <string name="reenter_newpass_label">Re-enter new password</string>
    <string name="facebook_app_id">203713910168819</string>
    <string name="fb_login_protocol_scheme">fb203713910168819</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name_menu">User Name</string>
    <string name="search_hint">Search Area</string>
    <string name="title_activity_maps">Map</string>
    <!-- PasswordSQLHelper Recovery -->
    <!-- Strings related to verification for forgot password and reset password-->
    <string name="pwdrecovery_desc1">Please enter the code below to reset password</string>
    <string name="pwdrecovery_desc2">A Verification code was sent</string>
    <string name="pwdrecovery_pwd">New Password</string>
    <string name="pwdrecovery_confirmpwd">Reconfirm New Password</string>
    <string name="pwdrecovery_code">Verification Code</string>

    <string name="pwdrecovery_submit">Submit</string>
    <string name="pwdrecovery_resend">Resend a new code</string>
    <string name="aws_userpool">ap-southeast-1_Qng7tbYxG</string>
    <string name="aws_identitypool">ap-southeast-1:365da5cf-e75f-4e4f-84bb-d99244df4408</string>;
    <string name="aws_appid">44ftbv7gbpmjnvjih4ckpemokl</string>
    <string name="aws_appsec">dg4a9hisgrqdenj81rcgagt9pc66837m2fp5ike31ddpc7kt8js</string>
    <string name="file_label">New File</string>
    <string name="new_area_label">New Area</string>
    <string name="new_area_name_hint">Area name</string>
    <string name="new_area_desc_hint">Small description</string>
    <string name="create_new_area_btn">Create new area</string>
    <string name="existing_area_label">Select existing area</string>
    <string name="existing_area_btn">Choose existing area</string>
    <string name="edit_radius_btn">Change radius</string>
    <string name="edit_area_label">Edit area</string>
    <string name="delete_area_btn">Delete area</string>
    <string name="radius_label">Radius:</string>
    <string name="radius_hint">5-1000</string>
    <string name="select_file_label">...</string>
    <string name="meter_label">m</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="file_operation_Head">File Name</string>
    <string name="file_operation_AreaName">Select area</string>
    <string name="file_operation_ButtonCopy">Copy File</string>
    <string name="file_operation_ButtonMove">Move File</string>
    <string name="file_operation_ButtonDelete">Delete File</string>
    <string name="file_operation_ButtonBack">Back</string>
    <string name="About_description"><p>LocAdoc aims to provide its user a way to store confidential documents in mobile devices and access it only in the area he/she find it is safe. By including two factor protections, one being password\n(what the user knows) and second being the location (where the user is currently),hence providing secure vault for document storage so the it does not get into wrong hands even if the device is compromised.</p></string>
    <string name="About_version">Version 1.0</string>
</resources>
