<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LocadocC"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FileLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_label"
                android:textColor="@color/Text1"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NewFileName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="7"
                    android:background="@color/Text1"
                    android:textColor="?attr/editTextColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/SelectFileButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:backgroundTint="@color/grey_100"
                    android:text="@string/select_file_label" />

            </LinearLayout>

            <TextView
                android:id="@+id/NewAreaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_area_label"
                android:textColor="@color/Text1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/NewAreaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/Text1"
                android:hint="@string/new_area_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/NewAreaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/Text1"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/new_area_desc_hint"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RadiusLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radius_label"
                    android:textColor="@color/Text1"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/RadiusEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.9"
                    android:background="@color/Text1"
                    android:hint="@string/radius_hint"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/MeterLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2.8"
                    android:text="@string/meter_label"
                    android:textColor="@color/Text1"
                    android:textSize="20sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/RadiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:max="995"
                android:progress="5"
                android:theme="@style/SeekBarColor" />

            <Button
                android:id="@+id/CreateNewAreaBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/grey_100"
                android:backgroundTint="@color/grey_100"
                android:text="@string/create_new_area_btn"
                android:textColor="@color/grey_500" />

            <TextView
                android:id="@+id/ExistingAreaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/existing_area_label"
                android:textColor="@color/Text1"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/ExistingArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/STheme" />

            <Button
                android:id="@+id/ExistingAreaBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_100"
                android:text="@string/existing_area_btn"
                android:textColor="@color/grey_500" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>