<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LocadocC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NewAreaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/new_area_label"
                android:textColor="@color/Text1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/NewAreaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/new_area_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/NewAreaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/new_area_desc_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RadiusLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radius_label"
                    android:textColor="@color/Text1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/RadiusEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.9"
                    android:background="@color/white"
                    android:hint="@string/radius_hint"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/MeterLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2.8"
                    android:text="@string/meter_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/RadiusSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:max="995"
                android:progress="5"
                android:theme="@style/SeekBarColor"/>

            <Button
                android:id="@+id/CreateNewAreaBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/create_new_area_btn"
                android:backgroundTint="@color/grey_100"
                android:textColor="@color/grey_500"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>