<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.locadoc_app.locadoc.UI.NewPassword.NewPasswordActivity">

    <TextView
        android:id="@+id/NewPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/newpass_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/UserNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username_detail_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/text_border_selector"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TextNewPassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_confirm_1A"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/alert"
        android:textSize="@dimen/activity_text_size_small" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:layout_below="@id/textViewConfirmCurPwdLabel"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_border_selector"
        android:hint="@string/newpass_label"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding" />

    <TextView
        android:id="@+id/TextReNewPassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_confirm_1A"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/alert"
        android:textSize="@dimen/activity_text_size_small" />

    <EditText
        android:id="@+id/ReNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:layout_below="@id/textViewConfirmCurPwdLabel"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_border_selector"
        android:hint="@string/reenter_newpass_label"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space_confirm_2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@color/colorAccent"
        android:text="Confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_button_text_size" />

</LinearLayout>
